Working build tree, finally

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "streamer"]
 	path = streamer
-	url = https://francesco.zanini@ans.disi.unitn.it/redmine/streamers-build.git
+	url = https://ans.disi.unitn.it/redmine/streamers.git
+	branch = devel
 [submodule "grapes"]
 	path = grapes
 	url = https://ans.disi.unitn.it/redmine/grapes.git
